# pymodoro

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
pymodoro/: __main__.py  command.py  pomodoro.py  sound.py
pymodoro/tests/: test_pomodoro.py  test_sound.py
